--- a/config/init.st-ericsson.rc
+++ b/config/init.st-ericsson.rc
@@ -93,6 +93,7 @@ on fs
 #    mount vfat /dev/block/mmcblk0p14 /sde  rw wait
 
     mount_all fstab.st-ericsson
+    swapon_all fstab.st-ericsson
 
     # SEMC: Start the TrimArea Daemon and early TA-users
     class_start trimarea
@@ -331,6 +332,9 @@ on boot
     write /sys/devices/system/cpu/cpufreq/ondemand/io_is_busy 1
 
     write /proc/sys/kernel/sysrq 0
+
+    # Read only 1 page at a time
+    write /proc/sys/vm/page-cluster 0
 
     # Configurate TCP/IP kernel settings
     exec /system/bin/sh /system/etc/init.netconfig.sh
