--- a/config/init.st-ericsson.rc
+++ b/config/init.st-ericsson.rc
@@ -26,6 +26,11 @@ on early-init
 
     chmod 0644 /proc/cmdline
 
+    # KSM
+    write /sys/kernel/mm/ksm/pages_to_scan 100
+    write /sys/kernel/mm/ksm/sleep_millisecs 500
+    write /sys/kernel/mm/ksm/run 1
+
 on init
     # setup the global environment
     export LD_LIBRARY_PATH /vendor/lib:/system/lib:/system/lib/ste_omxcomponents
