--- a/config/init.st-ericsson.rc
+++ b/config/init.st-ericsson.rc
@@ -326,9 +326,9 @@ on boot
 
     write /proc/sys/kernel/sysrq 0
 
-    # KSM
-    write /sys/kernel/mm/ksm/pages_to_scan 100
-    write /sys/kernel/mm/ksm/sleep_millisecs 500
+    # KSM parameters
+    write /sys/kernel/mm/ksm/pages_to_scan 256
+    write /sys/kernel/mm/ksm/sleep_millisecs 1500
     write /sys/kernel/mm/ksm/deferred_timer 1
     write /sys/kernel/mm/ksm/run 1
 
