--- a/config/init.st-ericsson.rc
+++ b/config/init.st-ericsson.rc
@@ -208,14 +208,6 @@ on post-fs-data
     chown system system /dev/dbx500_mloader_fw
     chmod 0600 /dev/dbx500_mloader_fw
 
-    #STE: create var/run, var/lib for avahi
-    mkdir /var
-    mkdir /var/run
-    mkdir /var/lib
-
-    #STE: Change permissions for modem_log_relay config file
-    chmod 666 /data/misc/trace_auto.conf
-
     # STE: set proper access to modem storage pipe
     chown radio radio /dev/rpc
     chmod 0600 /dev/rpc
@@ -240,10 +232,6 @@ on early-boot
     write /sys/module/cm/parameters/enable_auto_pm 1
 
 on boot
-
-    # Enable debugfs for eng and userdebug variants
-    class_start bootstage1
-
 
     # USB gadget initial setup
     write /sys/class/android_usb/android0/bDeviceClass 0
@@ -331,7 +319,7 @@ on boot
     write /sys/kernel/mm/ksm/deferred_timer 1
     write /sys/kernel/mm/ksm/run 1
 
-    # Swap
+    # Swap parameters
     # Read only 1 page at a time
     write /proc/sys/vm/page-cluster 0
 
@@ -380,9 +368,6 @@ on boot
     chown system system /sys/module/radio_cg2900/parameters/grid
     chmod 0660 /sys/module/radio_cg2900/parameters/band
     chmod 0660 /sys/module/radio_cg2900/parameters/grid
-
-    chown bluetooth bluetooth /data/misc/bluetooth
-    chown bluetooth bluetooth /dev/uhid
 
     # STE: Define support for SIM card hot swap
     setprop icc.hotswap supported
@@ -435,14 +420,6 @@ service illumination /system/bin/illumination_service
     class main
     user root
     
-on property:init.svc.bluetoothd=stopped
-    write /sys/class/rfkill/rfkill1/state 0
-    setprop bluetooth.status off
-
-on property:init.svc.bluetoothd=running
-    write /sys/class/rfkill/rfkill1/state 1
-    setprop bluetooth.status on
-
 # STE
 service lbsd /system/bin/lbsd
     class main
@@ -493,30 +470,6 @@ service iprenew_bnep0 /system/bin/dhcpcd -n
 service initial_regdom /system/bin/iw reg set US
     disabled
     oneshot
-
-# To prevent connection to channel 12, 13 in flight mode/no coverage/no sim case at startup.
-on property:wlan.driver.status=ok
-    start initial_regdom
-    write /sys/class/rfkill/rfkill0/state 1
-
-# power down wifi interface
-on property:wlan.driver.status=unloaded
-    write /sys/class/rfkill/rfkill0/state 0
-
-on property:init.svc.wpa_supplicant=stopped
-    start initial_regdom
-
-on property:init.svc.dhcpcd_wlan0=stopped
-    stop dhcpcd
-    exec /system/bin/rm -r /data/misc/dhcp/
-
-on property:dhcp.wlan0.result=ok
-    exec /system/bin/iw phy phy0 wowlan enable any
-
-# delete tethered interface and bring down wlan0
-on property:init.svc.hostapd=stopped
-    exec /system/bin/iw dev mon.wlan0 del
-    exec /system/bin/netcfg wlan0 down
 
 # STE, C&N service daemon
 service cn_server /system/bin/cn_server
@@ -580,11 +533,6 @@ service tad /system/bin/tad /dev/block/mmcblk0 9,4,256
     socket tad stream 0660 system system
     class trimarea
 
-# SEMC: Start startupflag
-on property:dev.bootcomplete=1
-    start setssflagbc
-    start lbsd
-
 # SEMC: Updatemiscta
 service updatemiscta /system/bin/updatemiscta
     class main
@@ -620,3 +568,42 @@ service fuse_sdcard0 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard0
 service fuse_usbdisk /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/usbdisk /storage/usbdisk
     class late_start
     disabled
+
+
+# To prevent connection to channel 12, 13 in flight mode/no coverage/no sim case at startup.
+on property:wlan.driver.status=ok
+    start initial_regdom
+    write /sys/class/rfkill/rfkill0/state 1
+
+# power down wifi interface
+on property:wlan.driver.status=unloaded
+    write /sys/class/rfkill/rfkill0/state 0
+
+on property:init.svc.wpa_supplicant=stopped
+    start initial_regdom
+
+on property:init.svc.dhcpcd_wlan0=stopped
+    stop dhcpcd
+    start dhcpcd_fix
+
+on property:dhcp.wlan0.result=ok
+    exec /system/bin/iw phy phy0 wowlan enable any
+
+# delete tethered interface and bring down wlan0
+on property:init.svc.hostapd=stopped
+    exec /system/bin/iw dev mon.wlan0 del
+    exec /system/bin/netcfg wlan0 down
+
+on property:init.svc.bluetoothd=stopped
+    write /sys/class/rfkill/rfkill1/state 0
+    setprop bluetooth.status off
+
+on property:init.svc.bluetoothd=running
+    write /sys/class/rfkill/rfkill1/state 1
+    setprop bluetooth.status on
+
+# SEMC: Start startupflag
+on property:dev.bootcomplete=1
+    start setssflagbc
+    start lbsd
+ 
