Further cleanup of init.st-ericsson.rc
- Replace shrm-netdev service and phonet-netdev service with "ifup
<interface>"
- Remove "give system access to ril config", as also 01stesetup does the
same thing.
- Convert the service dhcpcd_fix into a direct execution, this change
also fix his behaviour.

Change-Id: I4c61903a568cb373b4b7b4c72e3b16f3154a3c4a

Conflicts:
	config/init.st-ericsson.rc

Change-Id: I0f1291bb9f2fdbc42cb8e25ab892118bacf014e9

--- a/config/init.st-ericsson.rc
+++ b/config/init.st-ericsson.rc
@@ -161,11 +161,6 @@ on post-fs-data
     mkdir /data/misc/hcid 0770 bluetooth bluetooth
     mkdir /data/misc/psdata
 
-    # give system access to ril_config
-    copy -u /system/etc/ril_config /data/misc/ril_config
-    chmod 0660 /data/misc/ril_config
-    chown root radio /data/misc/ril_config
-
     mkdir /data/misc/telephony_log_levels
     chmod 0660 /data/misc/telephony_log_levels
     chown root radio /data/misc/telephony_log_levels
@@ -232,6 +227,10 @@ on early-boot
 
     # STE: Launch core services in case charging mode is entered
     start watchdog-kicker
+    
+    # init Phonet and shrm net device required for Phonet communication with Modem
+    ifup shrm0
+    ifup upnlink0
 
     # STE: Prepare modem
     class_start modem-u8500
@@ -395,15 +394,6 @@ on boot
     # STE: Enable wide-band speech for Bluetooth
     setprop bt.hfp.wideband 1
 
-# init shrm net device required for Phonet communication with Modem
-service shrm-netdev /system/bin/ifconfig shrm0 up
-    class modem-u8500
-    oneshot
-
-# init Phonet net device required for Phonet communication with Modem
-service phonet-netdev /system/bin/ifconfig upnlink0 up
-    class main
-    oneshot
 
 #STE: Start the Modem Storage Agent (MSA) service
 service modem /system/bin/sh /system/etc/ste_modem.sh
@@ -499,12 +489,6 @@ service iprenew_bnep0 /system/bin/dhcpcd -n
     disabled
     oneshot
 
-service dhcpcd_fix /system/bin/rm /data/misc/dhcp/*
-    user root
-    group root system dhcp
-    disabled
-    oneshot
-
 # Regulatory domain handling
 service initial_regdom /system/bin/iw reg set US
     disabled
@@ -524,7 +508,7 @@ on property:init.svc.wpa_supplicant=stopped
 
 on property:init.svc.dhcpcd_wlan0=stopped
     stop dhcpcd
-    start dhcpcd_fix
+    exec /system/bin/rm -r /data/misc/dhcp/
 
 on property:dhcp.wlan0.result=ok
     exec /system/bin/iw phy phy0 wowlan enable any
